--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,22 +1,22 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: SaugaWellness
+  site: 'https://sauga-wellness-astro.netlify.app/'
   base: '/'
   trailingSlash: false
 
-  googleSiteVerificationId: orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
+  googleSiteVerificationId: todo
 
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: SaugaWellness
+    template: '%s — SaugaWellness'
+  description: "\U0001F33F Food is Medicine"
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: SaugaWellness
     images:
       - url: '~/assets/images/default.png'
         width: 1200
